<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.essian.quizproject.MainActivity">


        <TextView
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/main_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/main_image" />

        <TextView
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title" />


        <TextView
            android:id="@+id/questionBasting"
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionBasting" />


        <RadioGroup
            android:id="@+id/radio_basting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/basting_true"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_radio" />

            <RadioButton
                android:id="@+id/basting_false"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_radio" />
        </RadioGroup>


        <TextView
            android:id="@+id/electricMachine"
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionElectricMachine" />

        <EditText
            android:id="@+id/electric_machine_answer"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />


        <TextView
            android:id="@+id/needleEye"
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionNeedleEye" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/needle_eye_tip"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/near_the_tip" />

                <RadioButton
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/it_has_no_eye" />

                <RadioButton
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/near_the_end" />
            </RadioGroup>
        </RelativeLayout>

        <TextView
            android:id="@+id/timGunn"
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionTimGunn" />

        <EditText
            android:id="@+id/tim_gunn_answer"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/treadle"
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionTreadle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:contentDescription="@string/treadle_description"
            android:scaleType="fitCenter"
            android:src="@drawable/treadle_machine" />

        <EditText
            android:id="@+id/treadle_answer"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/big4"
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionBig4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/wide_margin"
            android:layout_marginRight="@dimen/wide_margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/simplicity"
                    style="@style/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simplicity" />

                <CheckBox
                    android:id="@+id/burdastyle"
                    style="@style/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/burdastyle" />

                <CheckBox
                    android:id="@+id/kwiksew"
                    style="@style/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kwiksew" />

                <CheckBox
                    android:id="@+id/vogue"
                    style="@style/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vogue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/mccalls"
                    style="@style/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mccalls" />

                <CheckBox
                    android:id="@+id/newlook"
                    style="@style/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_look" />

                <CheckBox
                    android:id="@+id/burda"
                    style="@style/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/burda" />

                <CheckBox
                    android:id="@+id/butterick"
                    style="@style/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/butterick" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/questionOverlockerThreads"
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionOverlockerThreads" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_needles"
                style="@style/smallButton"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/needle_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/standard_text" />

            <Button
                android:id="@+id/increment_needles"
                style="@style/smallButton"
                android:text="@string/plus" />

        </LinearLayout>

        <TextView
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/final_greeting" />

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                style="?attr/buttonBarPositiveButtonStyle"
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/start_again" />

            <android.support.v4.widget.Space
                android:id="@+id/spacer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="invisible"/>

            <Button
                style="?attr/buttonBarPositiveButtonStyle"
                android:id="@+id/score_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/submit" />
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>
</ScrollView>
